[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/prototype/Player.png" type="Texture" id=1]
[ext_resource path="res://scripts/PlayerController.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 32 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_mask = 12
script = ExtResource( 2 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="GroundedRays" type="Node2D" parent="."]

[node name="RayCastGroundL" type="RayCast2D" parent="GroundedRays"]
position = Vector2( -23.5, 31.5 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 4

[node name="RayCastGroundM" type="RayCast2D" parent="GroundedRays"]
position = Vector2( 0, 31.5 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 4

[node name="RayCastGroundR" type="RayCast2D" parent="GroundedRays"]
position = Vector2( 23.5, 31.5 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 4
